chore(logo):replace default logo with fuzionx logo

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -72,7 +72,9 @@ under the License.
       </span>
     </a>
     <div class="toc-wrapper">
-      <%= image_tag "logo.png", class: 'logo' %>
+      <div style="padding: 20px; margin: auto; width: fit-content; text-align: center;">
+        <%= image_tag "logo.png", class: 'logo' %>
+      </div>
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
